--- a/deploy/deploybooks/systems/robot/uav/ds/compose.yaml
+++ b/deploy/deploybooks/systems/robot/uav/ds/compose.yaml
@@ -14,7 +14,7 @@
     - super:
       - docker-compose-wrapper $scenario build --force-rm uav-superodometry-$deploy_system_type-image
     # ignore any error messages (in case there are no dangling images)
-    - docker rmi -f $(docker images -f "dangling=true" -q) || true
+    # - docker rmi -f $(docker images -f "dangling=true" -q) || true
 
   # ////////////////////////////////////////////////////////////////////////////
   - container:
