--- a/deploy/deploybooks/systems/robot/uav/ds/registry.yaml
+++ b/deploy/deploybooks/systems/robot/uav/ds/registry.yaml
@@ -10,7 +10,7 @@
     - azure:
     # //////////////////////////////////////////////////////////////////////////
       # use default docker context
-      - docker context use $DCTX
+      # - docker context use $DCTX
       - pull:
         - core:
           # pull from the azure registry
@@ -26,6 +26,17 @@
         - super:
           - docker pull $AZURE_REGISTRY/subt-uav-$deploy_system_type-superodometry
           - docker tag  $AZURE_REGISTRY/subt-uav-$deploy_system_type-superodometry subt/uav-$deploy_system_type:superodometry
+
+      - push:
+        - perception:
+          - docker tag subt/uav-$deploy_system_type:perception      $AZURE_REGISTRY/subt-uav-$deploy_system_type-perception
+          - docker push $AZURE_REGISTRY/subt-uav-$deploy_system_type-perception
+          # change the docker context to the uav azure docker daemon
+          # pull the uav docker images from the laptop local registry to the robot
+          - docker pull $AZURE_REGISTRY/subt-uav-$deploy_system_type-perception
+          # tag the uav docker images on the robot
+          - docker tag $AZURE_REGISTRY/subt-uav-$deploy_system_type-perception      subt/uav-$deploy_system_type:perception
+
 
       # remove the azure docker images
       - docker rmi $(docker images | grep $AZURE_REGISTRY | tr -s ' ' | cut -d ' ' -f 1)
