update to ansiblebooks, using user config as vars

--- a/deploy/robotbooks/tasks/docker-tools.yaml
+++ b/deploy/robotbooks/tasks/docker-tools.yaml
@@ -5,9 +5,9 @@
 - name: docker tools setup
 
   vars_files:
-    - ../vars/user-inputs.yaml
     - ../vars/main.yaml
     - ../vars/hosts.yaml
+    - "{{ lookup('env','SUBT_CONFIGURATION_PATH') }}/ansible_config.yaml"
 
   # run playbook on the specified hosts
   hosts:
