--- a/deploy/robotbooks/tasks/docker-nvidia.yaml
+++ b/deploy/robotbooks/tasks/docker-nvidia.yaml
@@ -6,7 +6,7 @@
 
   vars_files:
     - ../vars/main.yaml
-    - ../vars/user-inputs.yaml
+    - "{{ lookup('env','SUBT_CONFIGURATION_PATH') }}/ansible_config.yaml"
 
   # run playbook on the specified hosts
   hosts:
