--- a/deploy/robotbooks/tasks/gnome.yaml
+++ b/deploy/robotbooks/tasks/gnome.yaml
@@ -6,8 +6,8 @@
 
   # setup variables to be shared in tasks
   vars_files:
-    - ../vars/user-inputs.yaml
     - ../vars/main.yaml
+    - "{{ lookup('env','SUBT_CONFIGURATION_PATH') }}/ansible_config.yaml"
 
   # setup hosts to run commands as
   hosts:
