--- a/deploy/robotbooks/tasks/robothost.yaml
+++ b/deploy/robotbooks/tasks/robothost.yaml
@@ -6,9 +6,9 @@
 
   # setup variables to be shared in tasks
   vars_files:
-    - ../vars/user-inputs.yaml
     - ../vars/main.yaml
     - ../vars/hosts.yaml
+    - "{{ lookup('env','SUBT_CONFIGURATION_PATH') }}/ansible_config.yaml"
 
   # setup hosts to run commands as
   hosts:
