starting cleanup of deployerbooks

--- a/deploybooks/main/platform/ugv.split.yaml
+++ b/deploybooks/main/platform/ugv.split.yaml
@@ -14,6 +14,7 @@
 
 - xavier:
   - export PLATFORM_COMPUTER_NAME=xavier
+  - export COMPUTER_ARCH=arm
   - +import:systems/env/env.split
 
   - +extend: common/sync
