--- a/deploybooks/workspaces/uav.ds.yaml
+++ b/deploybooks/workspaces/uav.ds.yaml
@@ -3,8 +3,8 @@
   - export DCTX=robot-uav-$ROBOT
 
   # extend common workspaces
-  - +extend: systems/workspaces/ros
-  - +extend: systems/workspaces/super
+  - +extend: workspaces/melodic
+  - +extend: workspaces/super
 
   # export the scenario type
   - core:
@@ -14,7 +14,7 @@
     - export CATKIN_PROFILE=core
 
     # import the workspace environment setup
-    - +import:systems/env/env.simulation
+    - +import:env/simulation.env
 
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
@@ -22,7 +22,7 @@
     # extend general actions
     - +extend: common/docker.registry
     - +extend: common/docker
-    - +extend: systems/catkin/uav.core
+    - +extend: catkin/uav.core
 
   # export the scenario type
   - wifi:
@@ -32,7 +32,7 @@
     - export CATKIN_PROFILE=wifi
 
     # import the workspace environment setup
-    - +import:systems/env/env.simulation
+    - +import:env/simulation.env
 
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=superodometry
@@ -40,7 +40,7 @@
     # extend general actions
     - +extend: common/docker.registry
     - +extend: common/docker
-    - +extend: systems/catkin/uav.core
+    - +extend: catkin/uav.core
 
   # extend perception workspace
-  - +extend: systems/workspaces/perception
+  - +extend: workspaces/perception
