--- a/deploybooks/env/robot.env.yaml
+++ b/deploybooks/env/robot.env.yaml
@@ -8,10 +8,10 @@
 - export DOCKER_COMPOSE_IMAGE_SHORT_NAME=${SCENARIO}
 
 # setup the docker service calls
-- export DOCKER_COMPOSE_SERVICE=${ROBOT}-${SCENARIO}
+- export DOCKER_COMPOSE_SERVICE=${PLATFORM}-${SCENARIO}
 
 # setup the base image for uav core simulation
 - export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM}
 
 # extend robot actions
-- source operations/deploy/scenarios/systems/${INFRA}/${PLATFORM}.env ${ROBOT}
+- source operations/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env ${ROBOT}
