--- a/deploybooks/main/platform/uav.robot.yaml
+++ b/deploybooks/main/platform/uav.robot.yaml
@@ -7,19 +7,19 @@
     - +env:ROBOT=uav1
     - +env:UAV_COMPUTER=ds1
     - +extend: common/sync
-    - +extend: systems/workspaces/uav.ds
+    - +extend: workspaces/uav.ds
   - ds2:
     - +env:ROBOT=uav2
     - +env:UAV_COMPUTER=ds2
     - +extend: common/sync
-    - +extend: systems/workspaces/uav.ds
+    - +extend: workspaces/uav.ds
   - ds3:
     - +env:ROBOT=uav3
     - +env:UAV_COMPUTER=ds3
     - +extend: common/sync
-    - +extend: systems/workspaces/uav.ds
+    - +extend: workspaces/uav.ds
   - ds4:
     - +env:ROBOT=uav4
     - +env:UAV_COMPUTER=ds4
     - +extend: common/sync
-    - +extend: systems/workspaces/uav.ds
+    - +extend: workspaces/uav.ds
