--- a/deploybooks/main/platform/ugv.simulation.yaml
+++ b/deploybooks/main/platform/ugv.simulation.yaml
@@ -4,14 +4,20 @@
   - export PLATFORM=ugv
 
   - ugv1:
+    # exact name of remote/local system
     - +env:ROBOT=ugv1
-    - export DCTX=azure-ugv1
-    - +extend: systems/workspaces/ugv.simulation
-  - ugv2:
-    - +env:ROBOT=ugv2
-    - export DCTX=azure-ugv2
-    - +extend: systems/workspaces/ugv.simulation
-  - ugv3:
-    - +env:ROBOT=ugv3
-    - export DCTX=azure-ugv3
-    - +extend: systems/workspaces/ugv.simulation
+    # setup docker context
+    - +import:env/header.env
+    - set_docker_dctx
+    # extend ugv simulation workspace
+    - +extend: workspaces/ugv.simulation
+
+#   - ugv2:
+#     - +env:ROBOT=ugv2
+#     - export DCTX=azure-ugv2
+#     - +extend: workspaces/ugv.simulation
+#   - ugv3:
+#     - +env:ROBOT=ugv3
+#     - export DCTX=azure-ugv3
+#     - +extend: workspaces/ugv.simulation
+#
