--- a/deploybooks/workspaces/super.yaml
+++ b/deploybooks/workspaces/super.yaml
@@ -6,7 +6,7 @@
   - export DOCKER_BASE_IMAGE_PROJECT=${PLATFORM}
 
   # re-source the scenarios file (since not calling actions)
-  - source operations/deploy/scenarios/systems/${INFRA}/${PLATFORM}.env ${SCENARIO}
+  - source operations/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env ${SCENARIO}
 
   # setup the docker service calls
   - export DOCKER_COMPOSE_SERVICE=${PLATFORM}-superodometry
