--- a/deploybooks/workspaces/ugv.ppc.yaml
+++ b/deploybooks/workspaces/ugv.ppc.yaml
@@ -1,24 +1,19 @@
 - scenarios:
   # common remote sync actions
-  - +extend: systems/workspaces/ros
+  - +extend: workspaces/melodic
 
-  # TODO: chonky...
-
-  # export the scenario type
   - core:
     # setup pre-defined environment variables, for workspace env import
-    - +env:DOCKER_CONTAINER=xavier-shell
-    - export SCENARIO=xavier
-    - export CATKIN_PROFILE=xavier
+    - +env:DOCKER_CONTAINER=ppc-shell
+    - export SCENARIO=core
 
     # import the workspace environment setup
-    - +import:systems/env/env.robot
+    - +import:env/robot.env
 
     # override any default environment setups
     - export DOCKER_BASE_IMAGE_PROJECT=ros.melodic
-    - export DOCKER_COMPOSE_SERVICE=ugv-xavier
 
     # extend general actions
     - +extend: common/docker.registry
     - +extend: common/docker
-    - +extend: systems/catkin/ugv.xavier
+    - +extend: catkin/ugv.ppc
