--- a/scenarios/.docker.env
+++ b/scenarios/.docker.env
@@ -1,7 +1,10 @@
 # -- general settings --
 
-# Setup to enable nvidia gpu passthrough
+# default gpu docker configuration
 export GPU_ENABLE_TYPE="non-gpu"
+
+# setup the default architecture, docker image type
+export DOCKER_IMAGE_ARCH="cpu"
 
 # docker image registries
 export AZURE_REGISTRY="subtexplore.azurecr.io"
@@ -29,7 +32,20 @@ export DOCKER_ROS_BASE_GPU_IMAGE=nvidia/cudagl:10.0-devel-ubuntu18.04
 # export the docker base image
 export DOCKER_BASE_IMAGE_ROS=$DOCKER_ROS_BASE_CPU_IMAGE
 
-# COMMENT: 'DOCKER_IMAGE', used in compose, is set in infrastructure/.infrastructure.env files
+# -- setup which type of architecture to use --
+
+# enable nvidia gpu, only if the user has set up the configuration
+if [ "$USE_NVIDIA_DRIVER" = true ] ; then
+  export GPU_ENABLE_TYPE="x86-gpu"
+
+  # enable nvidia gpu, only if the user has set up the configuration
+  if [ "$USE_ENHANCED_GPU_DOCKER_IMAGES" = true ] ; then
+    export DOCKER_IMAGE_ARCH="gpu"
+    export DOCKER_BASE_IMAGE_ROS=$DOCKER_ROS_BASE_GPU_IMAGE
+  fi
+else
+  export GPU_ENABLE_TYPE="non-gpu"
+fi
 
 # -- docker entrypoint workspaces --
 
@@ -45,3 +61,18 @@ export UAV_WS_SOURCE="$DEPLOY_WS_PREFIX/uav/launch/setup.bash"
 
 # set the uav entrypoint (docker-compose for uav.simulation and uav.robot)
 export UAV_DOCKER_ENTRYPOINT="ws-shell.bash"
+
+# -- deployer environment variables sourced --
+# TODO: remove?
+
+# deployer environment settings used in container (unfortunately, it is hard-coded..., needs to change to relative)
+export DEPLOYER_PATH=/home/developer/deploy_ws/src/operations/deployer/
+export DEPLOYER_BOOKS_PATH=/home/developer/deploy_ws/src/operations/deploybooks/
+export DEPLOYER_SCRIPTS=/home/developer/deploy_ws/src/operations/deployer/bin/
+export DEPLOYER_EXPORT_FILEPATH=/home/developer/.subt/.completion/
+export DEPLOYER_BASHRC_FILEPATH=.subt/subtrc.bash
+
+# deployer configuration settings
+export DEPLOYER_PARALLELIZE_MATCHES_JOBS=$DEPLOYER_PARALLELIZE_MATCHES_JOBS
+export DEPLOYER_WS_NAME=$DEPLOYER_WS_NAME
+
