--- a/deploybooks/main/platform/uav.robot.plt.yaml
+++ b/deploybooks/main/platform/uav.robot.plt.yaml
@@ -6,20 +6,55 @@
   - ds1:
     - +env:ROBOT=uav1
     - +env:UAV_COMPUTER=ds1
+
+    # setup docker context
+    - +import:env/header.env
+    - set_docker_dctx
+
+    # extend remote rsync actions
     - +extend: common/sync
+
+    # extend uav ds workspace
     - +extend: workspaces/uav.ds
+
   - ds2:
     - +env:ROBOT=uav2
     - +env:UAV_COMPUTER=ds2
+
+    # setup docker context
+    - +import:env/header.env
+    - set_docker_dctx
+
+    # extend remote rsync actions
     - +extend: common/sync
+
+    # extend uav ds workspace
     - +extend: workspaces/uav.ds
+
   - ds3:
     - +env:ROBOT=uav3
     - +env:UAV_COMPUTER=ds3
+
+    # setup docker context
+    - +import:env/header.env
+    - set_docker_dctx
+
+    # extend remote rsync actions
     - +extend: common/sync
+
+    # extend uav ds workspace
     - +extend: workspaces/uav.ds
+
   - ds4:
     - +env:ROBOT=uav4
     - +env:UAV_COMPUTER=ds4
+
+    # setup docker context
+    - +import:env/header.env
+    - set_docker_dctx
+
+    # extend remote rsync actions
     - +extend: common/sync
+
+    # extend uav ds workspace
     - +extend: workspaces/uav.ds
