--- a/deploybooks/workspaces/ugv.nuc.yaml
+++ b/deploybooks/workspaces/ugv.nuc.yaml
@@ -35,20 +35,17 @@
     - +extend: common/docker
     - +extend: catkin/ugv.nuc.slam
 
-#     - perception:
-#       # setup pre-defined environment variables, for workspace env import
-#       - +env:DOCKER_CONTAINER=perception-shell
-#       - export SCENARIO=nuc
-#       - export CATKIN_PROFILE=nuc
-# 
-#       # import the workspace environment setup
-#       - +import:env/simulation.env
-# 
-#       # override any default environment setups
-#       - export DOCKER_BASE_IMAGE_PROJECT=superodometry
-#       - export DOCKER_COMPOSE_SERVICE=ugv-nuc
-# 
-#       # extend general actions
-#       - +extend: common/docker.registry
-#       - +extend: common/docker
-#       - +extend: catkin/ugv.nuc.perception
+  # extend perception workspace (docker and catkin)
+  - perception:
+    # setup pre-defined environment variables, for workspace env import
+    - +env:DOCKER_CONTAINER=perception-shell
+    - export SCENARIO=wifi
+    - export CATKIN_PROFILE=wifi
+
+    # import the workspace environment setup
+    - +import:env/robot.env
+
+    # extend general actions
+    - +extend: workspaces/perception
+    - scenarios.perception:
+      - +extend: catkin/ugv.nuc.perception
