--- a/deploybooks/common/sync.yaml
+++ b/deploybooks/common/sync.yaml
@@ -1,4 +1,4 @@
-- source operations/scenarios/systems/${INFRASTRUCTURE}/${ROBOT_PLATFORM}.env ${ROBOT}
+- source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE}/${ROBOT_PLATFORM}.env ${ROBOT}
 
 # transfer to remote host
 - transfer:
