--- a/deploybooks/workspaces/melodic.yaml
+++ b/deploybooks/workspaces/melodic.yaml
@@ -3,7 +3,7 @@
   - export DOCKER_COMPOSE_IMAGE_SHORT_NAME=ros.melodic
 
   # re-source the scenarios file (since not calling actions)
-  - source operations/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env ${SCENARIO}
+  - source $SUBT_OPERATIONS_PATH/scenarios/systems/${INFRASTRUCTURE_SYSTEM}/${PLATFORM}.env melodic
 
   # setup the docker service calls
   - export DOCKER_COMPOSE_SERVICE=${PLATFORM}-ros
