--- a/deploybooks/catkin/ugv.yaml
+++ b/deploybooks/catkin/ugv.yaml
@@ -1,5 +1,5 @@
+- export CATKIN_WORKSPACE=ugv
 - +import:env/catkin.env
 
-- export CATKIN_WORKSPACE=basestation
 - +extend: catkin/build
 - +extend: catkin/clean
