--- a/deploybooks/main/platform/ugv.robot.plt.yaml
+++ b/deploybooks/main/platform/ugv.robot.plt.yaml
@@ -5,10 +5,16 @@
 
   - ugv1:
     - +env:ROBOT=ugv1
-    - +extend: main/platform/ugv.robot.computer.plt
+    - +extend: main/platform/ugv.ppc.plt
+    - +extend: main/platform/ugv.nuc.plt
+    - +extend: main/platform/ugv.xavier.plt
   - ugv2:
     - +env:ROBOT=ugv2
-    - +extend: main/platform/ugv.robot.computer.plt
+    - +extend: main/platform/ugv.ppc.plt
+    - +extend: main/platform/ugv.nuc.plt
+    - +extend: main/platform/ugv.xavier.plt
   - ugv3:
     - +env:ROBOT=ugv3
-    - +extend: main/platform/ugv.robot.computer.plt
+    - +extend: main/platform/ugv.ppc.plt
+    - +extend: main/platform/ugv.nuc.plt
+    - +extend: main/platform/ugv.xavier.plt
