--- a/deploybooks/catkin/simulation.yaml
+++ b/deploybooks/catkin/simulation.yaml
@@ -1,5 +1,3 @@
-- +import:env/catkin.env
-
 - darpa:
   - export CATKIN_WORKSPACE=simulation/darpa/catkin
   - +extend: catkin/build
@@ -8,6 +6,6 @@
 - core:
   - export CATKIN_WORKSPACE=simulation/
   # TEMPORARY! REALLY BAD.
-  - touch velodyne_simulator/velodyne_gazebo_plugins/CATKIN_IGNORE
+  - touch ~/deploy_ws/src/simulation/velodyne_simulator/velodyne_gazebo_plugins/CATKIN_IGNORE
   - +extend: catkin/build
   - +extend: catkin/clean
