--- a/deploybooks/workspaces/shared/perception.wifi.yaml
+++ b/deploybooks/workspaces/shared/perception.wifi.yaml
@@ -1,7 +1,8 @@
 - scenarios.perception.wifi:
-  # TODO: non-docker
   - catkin:
     - export CATKIN_PROFILE=perception.wifi
+    - +import:env/catkin.host.env
+
     - +extend: catkin/common
     - +extend: catkin/perception
     - +extend: catkin/subt_launch
