--- a/deploybooks/workspaces/ugv.simulation.yaml
+++ b/deploybooks/workspaces/ugv.simulation.yaml
@@ -1,23 +1,32 @@
 - scenarios:
+
+  # extend common workspaces
   - +extend: workspaces/shared/melodic
+  - +extend: workspaces/shared/super
 
   - core:
     # setup pre-defined environment variables, for workspace env import
-    - +env:DOCKER_CONTAINER=basestation-shell
+    - +env:DOCKER_CONTAINER=$ROBOT-shell
     - export SCENARIO=core
 
     # import the workspace environment setup
     - +import:env/workspace.env
     - +import:env/simulation.env
 
+    # override any default environment setups
+    - export DOCKER_BASE_IMAGE_PROJECT=superodometry
+
     # extend general actions
     - +extend: common/docker.registry
     - +extend: common/docker
-
     - catkin:
-      - export CATKIN_PROFILE=basestation
+      - export CATKIN_PROFILE=ugv.core
       - +import:env/catkin.env
 
       - +extend: catkin/common
-      - +extend: catkin/basestation
+      - +extend: catkin/ugv
+      - +extend: catkin/uav
+      - +extend: catkin/simulation
       - +extend: catkin/subt_launch
+
+  - +extend: workspaces/shared/perception
