--- a/deploybooks/main/platform/ugv.simulation.plt.yaml
+++ b/deploybooks/main/platform/ugv.simulation.plt.yaml
@@ -8,7 +8,7 @@
     - +env:ROBOT=ugv1
 
     # setup docker context
-    - +import:env/header.env
+    - +import:env/platform.env
     - set_docker_dctx
 
     # extend ugv simulation workspace
@@ -19,7 +19,7 @@
     - +env:ROBOT=ugv2
 
     # setup docker context
-    - +import:env/header.env
+    - +import:env/platform.env
     - set_docker_dctx
 
     # extend ugv simulation workspace
@@ -30,7 +30,7 @@
     - +env:ROBOT=ugv3
 
     # setup docker context
-    - +import:env/header.env
+    - +import:env/platform.env
     - set_docker_dctx
 
     # extend ugv simulation workspace
